--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,3 +1,11 @@
+2011-03-21  Dr. Bernhard Pfaff  <bp@callisto>
+
+	* data/*.Rda: Saved data files in compressed form.
+
+2009-06-29  Dr. Bernhard Pfaff  <bp@callisto>
+
+	* inst/Talks/pfaff-meielisalp.pdf: Presentation added.
+
 2009-04-29  Dr. Bernhard Pfaff  <bp@callisto>
 
 	* R/Methods-show.R (show): Fixed typo 'Linar' to 'Linear'.
